<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstNum_edt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/first_number"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secondNum_edt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/second_number"
        app:layout_constraintTop_toBottomOf="@id/firstNum_edt" />


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondNum_edt"
        tools:text="15" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/plus"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondNum_edt" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:text="@string/minus"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondNum_edt" />


    <Button
        android:id="@+id/btn_mult"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/mult"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/div"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_minus" />

</androidx.constraintlayout.widget.ConstraintLayout>